--- a/hab.html
+++ b/hab.html
@@ -46,7 +46,7 @@
                         <img src="assets/images/mbr-154x154.jpg" alt="Home" title="Home" style="height: 4.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">Project Home</a></span>
+                
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header1 cid-rm9R7PWIgc mbr-parallax-background" id="header1-1b">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header1 cid-rm9R7PWIgc mbr-parallax-background" id="header1-1b">
 
     
 
