--- a/sbm.html
+++ b/sbm.html
@@ -46,7 +46,9 @@
                         <img src="assets/images/mbr-154x154.jpg" alt="Home" title="Home" style="height: 4.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">Project Home</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">
+                        MOBIRISE
+                    </a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header1 cid-rm9OJbTtMv mbr-parallax-background" id="header1-y">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="header1 cid-rm9OJbTtMv mbr-parallax-background" id="header1-y">
 
     
 
