--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">
-                        MOBIRISE
-                    </a></span>
+                        Home<br></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -64,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rm8PKNDGTR mbr-parallax-background" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="cid-rm8PKNDGTR mbr-parallax-background" id="header2-0">
 
     
 
@@ -91,11 +90,11 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 100%;">
-            <div class="section-text align-center mbr-fonts-style display-7">Welcome to my final portfolio for <a href="https://www.unomaha.edu/college-of-education/" target="_blank">University of Nebraska-Omaha's TED</a> 8860 Invention &amp; Innovation in Engineering Education. The purpose of this website is to provide assistance to other teachers who are trying to implement new STEAM (Science, Technology, Engineering, Arts, &amp; Mathematics) components into their classroom. Each card below links to a step-by-step process for each of my projects created as a part of this class, including any code, links to purchasing necessary materials, and videos of any troubleshooting and final products. Feel free to contact me using the link below with comments on any of the projects or with questions or suggestions for improvement!<br><br><strong><em>My STEM Philosphy:
+            <div class="section-text align-center mbr-fonts-style display-7">Welcome to my final portfolio for <a href="https://www.unomaha.edu/college-of-education/" target="_blank">University of Nebraska-Omaha's TED</a> 8860 Invention &amp; Innovation in Engineering Education. The purpose of this website is to provide assistance to other teachers who are trying to implement new STEAM (Science, Technology, Engineering, Arts, &amp; Mathematics) components into their classroom. Each card below links to a step-by-step process for each of my projects created as a part of this class, including any code, links to purchasing necessary materials, and videos of any troubleshooting and final products. Feel free to contact me using the link below with comments on any of the projects or with questions or suggestions for improvement!<br><br><strong><em>My STEM Philosphy:</em></strong><br><br><strong><em>
 </em></strong><div>
 </div><div><em>Kids need a place where they can get together to learn how to approach and solve problems         they care about.
 </em></div><div>
-</div><div>&nbsp; &nbsp; &nbsp; &nbsp; As a middle school STEM teacher, I feel students learn best through a constructivist teaching         approach. Constructivism, is an inquiry-based teaching method that offers a student-centered         learning community where students work collaboratively together to solve real world problems.         I believe that teaching with this type of instruction empowers my students to take ownership of         their learning by allowing them to explore problems and uncover solutions.&nbsp;
+</div><div><br></div><div>&nbsp; &nbsp; &nbsp; &nbsp; As a middle school STEM teacher, I feel students learn best through a constructivist teaching         approach. Constructivism, is an inquiry-based teaching method that offers a student-centered         learning community where students work collaboratively together to solve real world problems.         I believe that teaching with this type of instruction empowers my students to take ownership of         their learning by allowing them to explore problems and uncover solutions.&nbsp;
 </div><div>
 </div><div>&nbsp; &nbsp; &nbsp; &nbsp; To be a successful educator, student learning should be the focal point of instruction. For that         reason, I consider myself a facilitator rather than a teacher. As a facilitator, I aim to provide my         students with the learning tools to construct their own education. Many of my middle school         students are natural scientists. They love to explore, invent, build, and figure things out and be         actively engaged in their learning. While many tolerate and enjoy working with a 'fake' scenario         (“A space alien has just landed and . . .”) they are most engaged when dealing with real-world         problems that scientists and engineers are or were working on. Environmental and school-
 <span style="font-size: 1.4rem;">based issues are among their favorites. They like to make the world and their school a better         place.&nbsp;</span></div><div>
