--- a/sbm.html
+++ b/sbm.html
@@ -47,8 +47,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="https://mobirise.co">
-                        MOBIRISE
-                    </a></span>
+                        Home<br></a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -65,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="header1 cid-rm9OJbTtMv mbr-parallax-background" id="header1-y">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website for free</a></section><section class="header1 cid-rm9OJbTtMv mbr-parallax-background" id="header1-y">
 
     
 
