create github pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-rm8PKNDGTR mbr-parallax-background" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-rm8PKNDGTR mbr-parallax-background" id="header2-0">
 
     
 
@@ -153,7 +153,7 @@
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">HAB Challenge<a href="hab.html" class="text-white">&nbsp;</a></h4>
-                        <p class="mbr-text mbr-fonts-style display-4">The purpose of this project was to to design and implement an experiment to be conducted during a High Altitude Balloon launch and flight. For this challenge I used the PocketLab sensor pack as a data logger for a Big Data lesson.&nbsp;<br></p>
+                        <p class="mbr-text mbr-fonts-style display-4"><a href="hab.html" class="text-white">The purpose of this project was to to design and implement an experiment to be conducted during a High Altitude Balloon launch and flight. For this challenge I used the PocketLab sensor pack as a data logger for a Big Data lesson.&nbsp;</a><br></p>
                     </div>
                 </div> 
             </div>
