--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="cid-rm8PKNDGTR mbr-parallax-background" id="header2-0">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-rm8PKNDGTR mbr-parallax-background" id="header2-0">
 
     
 
@@ -90,7 +90,7 @@
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 100%;">
-            <div class="section-text align-center mbr-fonts-style display-7"><strong>I love my girlfriend Molloy Moriarty!!!<br></strong><br>Welcome to my final portfolio for <a href="https://www.unomaha.edu/college-of-education/" target="_blank">University of Nebraska-Omaha's TED</a> 8860 Invention &amp; Innovation in Engineering Education. The purpose of this website is to provide assistance to teachers who are trying to implement new STEAM (Science, Technology, Engineering, Arts, &amp; Mathematics) components into their classroom. Each card below links to a step-by-step process for each of my projects created as a part of this class, including any code, links to purchasing necessary materials, and videos of any troubleshooting and final products. Feel free to contact me using the link below with comments on any of the projects or with questions or suggestions for improvement!<br><br><strong><em>My STEM Philosphy:</em></strong><br><br><strong><em>
+            <div class="section-text align-center mbr-fonts-style display-7">Welcome to my Engineering Design Portfolio(EDP) for <a href="https://www.unomaha.edu/college-of-education/" target="_blank">University of Nebraska-Omaha's TED</a>&nbsp;- 8860 Invention &amp; Innovation in Engineering Education. The purpose of this website is to provide assistance to teachers who are trying to implement new STEAM (Science, Technology, Engineering, Arts, &amp; Mathematics) components into their classroom. Each card below links to a step-by-step process for each of my projects created as a part of this class, including any code, links to purchasing necessary materials, and videos of any troubleshooting and final products. Feel free to contact me using the link below with comments on any of the projects or with questions or suggestions for improvement!<br><br><strong><em>My STEM Philosphy:</em></strong><br><br><strong><em>
 </em></strong><div>
 </div><div><em>Kids need a place where they can get together to learn how to approach and solve problems         they care about.
 </em></div><div>
@@ -253,7 +253,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
